Aligned fix fixed

--- a/src/app/info/info.component.scss
+++ b/src/app/info/info.component.scss
@@ -21,7 +21,7 @@
 
 .container {
   height: 100%;
-  display: flex;
+  width: 100%;
   justify-content: center;
   align-items: center;
 }
